исправить логику определения ночного сна и хронотипа