@@ -1,4 +1,7 @@
-package ru.yandex.practicum.sleeptracker;
+package ru.yandex.practicum.sleeptracker.functions;
+
+import ru.yandex.practicum.sleeptracker.structures.SleepAnalysisResult;
+import ru.yandex.practicum.sleeptracker.structures.SleepingSession;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
@@ -6,11 +9,12 @@ import java.util.List;
 
 public class SleeplessNightsCount implements SleepFunction {
 
+    private static final String DESCRIPTION = "Количество бессонных ночей";
+
     @Override
     public SleepAnalysisResult apply(List<SleepingSession> sessions) {
-
         if (sessions.isEmpty()) {
-            return new SleepAnalysisResult("Количество бессонных ночей", 0);
+            return new SleepAnalysisResult(DESCRIPTION, 0);
         }
 
         LocalDate lastDate = sessions.stream()
@@ -18,7 +22,7 @@ public class SleeplessNightsCount implements SleepFunction {
                 .max(LocalDate::compareTo)
                 .orElseThrow();
 
-        LocalDate startNight = calculateStartNight(sessions.get(0));
+        LocalDate startNight = calculateStartNight(sessions.getFirst());
 
         long totalNights = lastDate.toEpochDay() - startNight.toEpochDay() + 1;
 
@@ -30,11 +34,10 @@ public class SleeplessNightsCount implements SleepFunction {
 
         long sleeplessNights = Math.max(0, totalNights - nightsWithSleep);
 
-        return new SleepAnalysisResult("Количество бессонных ночей", sleeplessNights);
+        return new SleepAnalysisResult(DESCRIPTION, sleeplessNights);
     }
 
     private LocalDate calculateStartNight(SleepingSession firstSession) {
-
         LocalDate sessionDate = firstSession.getStartDate();
         LocalTime sessionTime = firstSession.getStartTime();
 
@@ -44,7 +47,6 @@ public class SleeplessNightsCount implements SleepFunction {
     }
 
     private LocalDate getNightDate(SleepingSession session) {
-
         LocalDate sessionDate = session.getStartDate();
         LocalTime sessionTime = session.getStartTime();
 
